--- a/Proyecto Final DB/src/views/home.handlebars
+++ b/Proyecto Final DB/src/views/home.handlebars
@@ -1,64 +1,24 @@
-<div class="container">
-  <div class="row ">
-    <div class="col-10">
-      <h1>Productos</h1>
+<h1 class="m-4">Productos</h1>
+<div class="container mx-auto">
+  <div class="row mb-3" id="products2sell">
+    <div class="col-sm mb-3">
+
+      <div class="card" style="width: 18rem;">
+
+        <img src="..." class="card-img-top" />
+
+        <div class="card-body">
+
+          <h5 class="card-title">Card title</h5>
+
+          <p class="card-text">Some quick example text to build on the card
+            title and make up the bulk of the card's content.</p>
+
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-12" id="productTable">
-    </div>
-  </div>
-  <div class="row ">
-    <div class="col-12">
-      <h1>Modificar Productos</h1>
-    </div>
-  </div>
-  <div class="row ">
-    <form class="col-12">
-      <div class="form-row">
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Titulo" id="getTitleModify">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Descripcion" id="getDescriptionModify">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Precio" id="getPriceModify">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Codigo" id="getCodeModify">
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="row ">
-    <div class="col-12">
-      <h1>Agregar Productos</h1>
-    </div>
-  </div>
-  <div class="row ">
-    <form class="col-12">
-      <div class="form-row">
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Titulo" id="getTitle">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Descripcion" id="getDescription">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Precio" id="getPrice">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Codigo" id="getCode">
-        </div>
-      </div>
-      <div class="form-row">
-        <button type="button" class="btn btn-success m-2 float-end" onclick="addProduct()">Agregar producto<i class="m-2 bi-plus-circle"></i></button>
-      </div>
-    </form>
   </div>
 </div>
+<script src="./js/home.js"></script>
