--- a/Proyecto Final DB/src/views/products.handlebars
+++ b/Proyecto Final DB/src/views/products.handlebars
@@ -30,6 +30,9 @@
         <div class="col">
           <input type="text" class="form-control m-1" placeholder="Codigo" id="getCodeModify">
         </div>
+        <div class="col">
+          <input type="text" class="form-control m-1" placeholder="Categoria" id="getCategory">
+        </div>
       </div>
     </form>
   </div>
@@ -54,6 +57,9 @@
         </div>
         <div class="col">
           <input type="text" class="form-control m-1" placeholder="Codigo" id="getCode">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control m-1" placeholder="Categoria" id="getCategory">
         </div>
       </div>
       <div class="form-row">
