--- a/Proyecto Final DB/src/views/products.handlebars
+++ b/Proyecto Final DB/src/views/products.handlebars
@@ -31,7 +31,7 @@
           <input type="text" class="form-control m-1" placeholder="Codigo" id="getCodeModify">
         </div>
         <div class="col">
-          <input type="text" class="form-control m-1" placeholder="Categoria" id="getCategory">
+          <input type="text" class="form-control m-1" placeholder="Categoria" id="getCategoryModify">
         </div>
       </div>
     </form>
