--- a/Proyecto Final DB/src/views/home.handlebars
+++ b/Proyecto Final DB/src/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1 class="m-4">Productos</h1>
+<h1 class="m-4">Productos - Hola! {{user}}</h1>
 <div class="container mx-auto">
   <div class="row mb-3" id="products2sell">
     {{#each context}}
