--- a/Proyecto Final DB/src/views/login.handlebars
+++ b/Proyecto Final DB/src/views/login.handlebars
@@ -21,5 +21,8 @@
 			<input id="password" type="password" name="password" placeholder="Password" required="">
 			<button type="submit">Login</button>
 		</form>
+		<form action="/user/loginGithub" method="get">
+			<button type="submit">Login con GitHUB!!!</button>
+		</form>
 	</div>
 </div>
